// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParentPicker handles object loading errors gracefully 1`] = `
<DocumentFragment>
  PidPicker: {"selected":""}
  <br />
  Please select a valid PID.
</DocumentFragment>
`;

exports[`ParentPicker renders correctly with a selected but unloaded parent 1`] = `
<DocumentFragment>
  ObjectLoader: {"pid":"foo:122"}PidPicker: {"selected":"foo:122"}
  <br />
  Please select a valid PID.
</DocumentFragment>
`;

exports[`ParentPicker renders correctly with a selected, loaded, custom-sorted parent 1`] = `
<DocumentFragment>
  ObjectLoader: {"pid":"foo:122"}PidPicker: {"selected":"foo:122"}
  <br />
  <div>
    <label>
      Position: 
      <input
        type="text"
        value=""
      />
    </label>
    <button>
      Set to Last Position in Parent
    </button>
  </div>
  Please enter a position.
</DocumentFragment>
`;

exports[`ParentPicker renders correctly with a selected, loaded, title-sorted parent 1`] = `
<DocumentFragment>
  ObjectLoader: {"pid":"foo:122"}PidPicker: {"selected":"foo:122"}
  <br />
  <button>
    Add Parent
  </button>
  <button>
    Move Here
  </button>
</DocumentFragment>
`;

exports[`ParentPicker renders correctly with no data loaded 1`] = `
<DocumentFragment>
  PidPicker: {"selected":""}
  <br />
  Please select a valid PID.
</DocumentFragment>
`;
